fix: hotel card text spacing

--- a/src/app/hotel-list/hotel-list.component.css
+++ b/src/app/hotel-list/hotel-list.component.css
@@ -13,6 +13,19 @@ section {
   margin-bottom: 200px;
 }
 
+.card-title {
+  font-size: 1.1rem;
+  margin-top: 4px;
+}
+
+.card-text {
+  margin: 0;
+}
+
+.card-button {
+  margin-top: 1rem;
+}
+
 .card {
   backdrop-filter: blur(10px) !important;
   background-color: rgba(255, 255, 255, 0.3);
@@ -30,7 +43,6 @@ a {
   font-style: italic !important;
   font-weight: 600;
   transition: 0.7s;
-  
 }
 
 .section2 {
